tests/k8s_testcases/network-policy-checks-bad-path/matchlabels_wrong_value_label_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: podselector-matchlabels-test-val
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
     app: 6
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
